fix: fixed the dropoff column vertical alignment in the order page

--- a/packages/ember-ui/addon/styles/components/dropdown.css
+++ b/packages/ember-ui/addon/styles/components/dropdown.css
@@ -47,7 +47,7 @@ body[data-theme='dark'] .dropdown-menu-item:focus {
     cursor: pointer;
     display: flex;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     font-weight: 500;
   }
   
